--- a/src/app/components/shooping/nuevo-producto/nuevo-producto.component.html
+++ b/src/app/components/shooping/nuevo-producto/nuevo-producto.component.html
@@ -241,6 +241,19 @@
                 </small>
             </small>
         </div>
+
+
+        <div class="form-group ">
+            <label for="cod_sap" style="margin: 0;">Codigo SAP</label>
+            <input type="text " class="form-control " id="cod_sap"
+                placeholder="Ingrese el costo del Producto." formControlName="cod_sap">
+            <small
+                *ngIf="modelProductForm.controls['cod_sap'].invalid && (modelProductForm.controls['cod_sap'].dirty || modelProductForm.controls['cod_sap'].touched)">
+                <small *ngIf="modelProductForm.controls['cod_sap'].errors?.['required']" style="color: red;">
+                    Debe ingresar el codigo del Producto.
+                </small>
+            </small>
+        </div>
         <button type="submit" class="btn btn-primary">
             <fa-icon [icon]="faSave" [size]="'sm'"></fa-icon>
             Guardar
