--- a/src/app/components/shooping/nuevo-producto/nuevo-producto.component.html
+++ b/src/app/components/shooping/nuevo-producto/nuevo-producto.component.html
@@ -244,7 +244,7 @@
 
 
         <div class="form-group ">
-            <label for="cod_sap" style="margin: 0;">Codigo SAP</label>
+            <label for="cod_sap" style="margin: 0;">Codigo</label>
             <input type="text " class="form-control " id="cod_sap"
                 placeholder="Ingrese el costo del Producto." formControlName="cod_sap">
             <small
