--- a/src/app/components/categories/categorias/categorias.component.html
+++ b/src/app/components/categories/categorias/categorias.component.html
@@ -15,7 +15,7 @@
                 <thead style="color: #636363;">
                     <tr>
                         <th style="width: 25%; ">Categoria</th>
-                        <th style="width: 25%; ">Cod. SAP</th>
+                        <th style="width: 25%; ">Codigo</th>
                         <th style="width: 30%; ">Etiquetas</th>
                         <th style="width: 20%; "></th>
                     </tr>
