--- a/src/app/components/discounts-cl/apply-discount/apply-discount.component.html
+++ b/src/app/components/discounts-cl/apply-discount/apply-discount.component.html
@@ -19,9 +19,6 @@
 
       </div>
 
-
-
-
       <table datatable [dtOptions]="dtOptions2" [dtTrigger]="dtTrigger2" style="width: 50%; margin-left: 20px;">
         <thead>
           <tr>
@@ -32,26 +29,19 @@
         </thead>
         <tbody>
           <tr *ngFor="let detallePago of lstDescuentos; let i = index">
-            <td>{{detallePago.id}}</td>
+            <td>
+              <ng-container *ngIf="!editarDetalle || i !== detalleEditIndex">
+                <!-- Si tipoDescuento es 1 entonces Porcentaje o 2 Monto -->
+                 {{detallePago.tipoDescuento == "1" ? 'Porcentaje' : 'Monto'}}
+              </ng-container>
+            </td>
             <td>
               <ng-container *ngIf="!editarDetalle || i !== detalleEditIndex">
                 {{detallePago.valorDescuento}}
               </ng-container>
-              <input class="small-input" (input)="onInput($event)" *ngIf="editarDetalle && i === detalleEditIndex"
-                type="text">
+           
             </td>
-            <td style="text-align: center;">
-              <ng-container *ngIf="!editarDetalle || i !== detalleEditIndex">
-                <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'lg'" style="margin-right: 5px;"
-                  data-placement="bottom" title="Editar pago"></fa-icon>
-              </ng-container>
-              <ng-container *ngIf="editarDetalle && i === detalleEditIndex">
-                <fa-icon [icon]="faCheck" class="btn btn-success" [size]="'lg'" style="margin-right: 5px;"
-                  data-placement="bottom" title="Aplicar"></fa-icon>
-              </ng-container>
-              <fa-icon [icon]="faTrashAlt" class="btn btn-danger" [size]=" 'lg' " data-placement="bottom"
-                title="Eliminar pago"></fa-icon>
-            </td>
+          
           </tr>
         </tbody>
       </table>
