--- a/src/app/components/sales/ver-factura/ver-factura.component.html
+++ b/src/app/components/sales/ver-factura/ver-factura.component.html
@@ -96,17 +96,17 @@
         <div class="icon-container">
           <label for="total" class="label-input" style="font-size: 14px;">Dto NOMINAL :</label>
           <input type="text" [(ngModel)]="descuentoN" class="cool-input resultado-input custom-input"
-            [disabled]="deshabilitarIn" (input)="onInput2($event)"
-           
+          readonly (input)="onInput2($event)"
             (click)="openModalDescuentoNominal()"
-            
-            >
+          >
         </div>
         <br><br>
         <div class="icon-container">
           <label for="total" class="label-input" style="font-size: 14px;">DESCUENTO % :</label>
           <input type="text" [(ngModel)]="descuentoP" class="cool-input resultado-input custom-input"
-            [disabled]="deshabilitarIn" (input)="validarDescuento()" (input)="onInput2($event)">
+            readonly (input)="validarDescuento()" (input)="onInput2($event)"
+            (click)="openModalDescuentoNominal()"
+          >
         </div>
         <br><br>
         <div class="icon-container">
