--- a/src/app/components/discounts-cl/apply-discount/apply-discount.component.html
+++ b/src/app/components/discounts-cl/apply-discount/apply-discount.component.html
@@ -44,8 +44,7 @@
       </table>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModal()">Cancelar</button>
-      <button type="button" class="btn btn-primary" (click)="descargarInventario()">Confirmar</button>
+      <button type="button" class="btn btn-primary" (click)="closeModal()">Confirmar</button>
     </div>
   </div>
 </div>
