--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -78,10 +78,11 @@
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido</font>
             </a>
             -->
-            <a mat-list-item href="#" class="disabled-link" style="color: white"  (click)="closeSidenavIfSmallScreen(drawer)">
+
+              <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['sugerdio-almacen'] } }]" style="color: white"  (click)="closeSidenavIfSmallScreen(drawer)">
                 <span class="material-icons-outlined" style="font-size: 24px">widgets</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido</font>
-              </a>
+            </a>
 
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['movimientos'] } }]" style="color: white"  (click)="closeSidenavIfSmallScreen(drawer)">
                 <span class="material-icons-outlined" style="font-size: 24px">monitor</span>
@@ -104,6 +105,12 @@
                 <span class="material-icons-outlined" style="font-size: 24px">supervisor_account</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Personal</font>
             </a>
+
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['descuentos'] } }]" style="color: white"  (click)="closeSidenavIfSmallScreen(drawer)">
+                <span class="material-icons-outlined" style="font-size: 24px">discount</span>
+                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Descuentos</font>
+            </a>
+
             <a mat-list-item (click)="logout()" style="color: white" (click)="closeSidenavIfSmallScreen(drawer)">
                 <span class="material-icons-outlined" style="font-size: 24px">logout</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Salir</font>
