--- a/src/app/components/models-products/modeloproductos-edit/modeloproductos-edit.component.html
+++ b/src/app/components/models-products/modeloproductos-edit/modeloproductos-edit.component.html
@@ -161,9 +161,9 @@
                                     placeholder="Ingrese el código de la Familia" formControlName="codigoFam" />
                             </div>
                             <div class="form-group">
-                                <label for="codigoSAP">Código SAP</label>
+                                <label for="codigoSAP">Código</label>
                                 <input type="text" class="form-control" id="codigoSAP"
-                                    placeholder="Ingrese el código SAP" formControlName="codigoSAP" />
+                                    placeholder="Ingrese el código" formControlName="codigoSAP" />
                             </div>
                             <div class="form-group">
                                 <label for="etiquetas">Imagen Marca</label>
