--- a/src/app/components/models-products/modeloproductos/modeloproductos.component.html
+++ b/src/app/components/models-products/modeloproductos/modeloproductos.component.html
@@ -21,7 +21,7 @@
                         <th style="width: 10%; ">Modelo</th>
                         <th style="width: 10%; ">Modelo Producto</th>
                         <th style="width: 10%; ">Familia</th>
-                        <th style="width: 10%; ">Cód. SAP</th>
+                        <th style="width: 10%; ">Código</th>
                         <th style="width: 10%; "></th>
                     </tr>
                 </thead>
