--- a/src/app/components/navegation-facturador/navegation-facturador.component.html
+++ b/src/app/components/navegation-facturador/navegation-facturador.component.html
@@ -12,6 +12,11 @@
             </button>
         </div>
         <p align="center" style="color:aliceblue">_________________________________</p>
+        <a mat-list-item routerLink="/navegation-cl" style="color: white" >
+            <font style="font-size: 13px; text-align: right;">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Nombre Comercial:</strong>&nbsp;{{nombre_comercial}}
+            </font>
+                    </a>
         <mat-nav-list>
             <a mat-list-item routerLink="/navegation-facturador" style="color: white"
             (click)="closeSidenavIfSmallScreen(drawer)"
