--- a/src/app/components/colors/colors-edit/colors-edit.component.html
+++ b/src/app/components/colors/colors-edit/colors-edit.component.html
@@ -21,8 +21,8 @@
                     </small >
                 </div>
                 <div class="form-group">
-                    <label for="codigoSAP">Código SAP</label>
-                    <input type="text" class="form-control" id="codigoSAP" placeholder="Ingrese el código SAP" formControlName="codigoSAP">
+                    <label for="codigoSAP">Código</label>
+                    <input type="text" class="form-control" id="codigoSAP" placeholder="Ingrese el código" formControlName="codigoSAP">
                     <small *ngIf="colorForm.controls['codigoSAP'].invalid && (colorForm.controls['codigoSAP'].dirty || colorForm.controls['codigoSAP'].touched)">
                         <small  *ngIf="colorForm.controls['codigoSAP'].errors" style="color: red;">
                             Debe ingresar el código.
