--- a/src/app/components/lines/lineas-create/lineas-create.component.html
+++ b/src/app/components/lines/lineas-create/lineas-create.component.html
@@ -47,12 +47,12 @@
                     </small>
                 </div>
                 <div class="form-group">
-                    <label for="codigoSAP">Código SAP</label>
+                    <label for="codigoSAP">Código</label>
                     <input type="text" class="form-control" id="codigoSAP" placeholder="Ingrese el código" formControlName="codigoSAP">
                     <small *ngIf="lineForm.controls['codigoSAP'].invalid && (lineForm.controls['codigoSAP'].dirty || lineForm.controls['codigoSAP'].touched)">
                         <small *ngIf="lineForm.controls['codigoSAP'].errors?.['required']"
                             style="color: red;">
-                            Debe ingresar el código SAP.
+                            Debe ingresar el código.
                         </small>
                     </small>
                 </div>
