--- a/src/app/components/lines/lineas/lineas.component.html
+++ b/src/app/components/lines/lineas/lineas.component.html
@@ -17,7 +17,7 @@
                         <th style="width: 20%; ">Categoria</th>
                         <th style="width: 20%; ">Línea</th>
                         <th style="width: 20%; ">Etiquetas</th>
-                        <th style="width: 20%; ">Código SAP</th>
+                        <th style="width: 20%; ">Código</th>
                         <th style="width: 20%; "></th>
                     </tr>
                 </thead>
