--- a/src/app/components/models/modelos/modelos.component.html
+++ b/src/app/components/models/modelos/modelos.component.html
@@ -18,7 +18,7 @@
                         <th style="width: 20%; ">Marca</th>
                         <th style="width: 20%; ">Modelo</th>
                         <th style="width: 20%; ">Etiquetas</th>
-                        <th style="width: 25%; ">Código SAP</th>
+                        <th style="width: 25%; ">Código</th>
                         <th style="width: 15%; "></th>
                     </tr>
                 </thead>
