--- a/src/app/components/products/productos-create/productos-create.component.html
+++ b/src/app/components/products/productos-create/productos-create.component.html
@@ -173,8 +173,8 @@
                 </div>
         
                 <div class="form-group">
-                    <label for="codigoSAP">Código SAP</label>
-                    <input type="text" class="form-control" id="codigoSAP" placeholder="Ingrese el código SAP"
+                    <label for="codigoSAP">Código</label>
+                    <input type="text" class="form-control" id="codigoSAP" placeholder="Ingrese el código"
                         formControlName="codigoSAP">
                 </div>
                 <button type="submit" class="btn btn-primary">
